<resources>
    <string name="app_name">School app</string>
    <string name="title_activity_germany">Germany</string>
    <string name="title_activity_germany_location">"BBS-Donnersbergkreis "</string>
    <string name="title_activity_it_location">IT_location</string>
    <string name="title_activity_it_picture">IT_picture</string>
    <string name="title_activity_it_meal">IT_meal</string>
    <string name="title_activity_pl_history">PL_history</string>
    <string name="title_activity_pl_discuss">PL_discuss</string>

    <string name="title_activity_logo_screen">logo_screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="czech_info1">High school of industry Brno, Purkyòova is considered to be one of the biggest schools in Brno at the moment. The schooling is mainly focused on Informational Technologies, Electronics and Social and Administrative.</string>
    <string name="czech_info2">The school was created in 1949 as a Industrial apprentice school with n.p. Tesla Brno. New builing of the electrotecnical school was built in 1984. Since then it evolved into current state, which is characterized by its stable offer of studying.</string>
    <string name="czech_info3">Informational Technologies:</string>
    <string name="czech_info4">This field of study prepares students for usage in wide world of informational technologies. For example management of computer networks, webpage creation, programming and automatization.</string>
    <string name="czech_info5">Social and Administrative:</string>
    <string name="czech_info6">This one is to teach student technicaly-administrative a organizational activities on the field of social services.</string>
    <string name="czech_info7">Economy and Bussines:</string>
    <string name="czech_info8">Economy and bussines is designed to secure required level of general and professional knowledge. Mainly in economy, massive data processing, social security and law.</string>
    <string name="czech_info9">Industrial Ecology:</string>
    <string name="czech_info10">Perspective and modern field of study thats focused on usage of renewable energy resources with devices as thermodynamical pumps, solar panels, water and wind power plants.</string>
    <string name="czech_info11">Mechanic, Electrician:</string>
    <string name="czech_info12">Field of study with wide possibility of usage in different areas that are focused on computing.</string>
    <string name="czech_info13">Electronics:</string>
    <string name="czech_info14">Field of study that reacts to the evolution of elecronics with emphasis on informational technologies, automatization and robotics, mobile networks and medical equipment.</string>
    <string name="fields_of_study">Fields of study:</string>
    <string name="germ_info1">BBS Donnersbergkreis was founded in 1996. Our school is located at two different places, one is at Rockenhausen, the second is at Eisenberg. Both towns are situated in the region of the Donnersbergkreis.</string>
    <string name="germ_info2">BBS Donnersbergkreis is a school with different types of schools, for example the Berufliche Gymnasium a school form that enables the students to attend a university. There also is the vocational school where the students can study their future profession. This could be the profession in the electric industry, in car repair and also in the field of economy and business.</string>
    <string name="germ_info3">Our Students also can study Social and Administrative field, like social service for children and seniors.</string>
    <string name="germ_info4">Since several years BBS Donnersbergkreis is proud to offer its students a cooperation with the University of Worms. Students of the Berufliche Gymnasium can attend theoretical and practical lessons offered by the university. This is used for example by the students that are enrolled to the a-grade courses in informatics. </string>
    <string name="germ_info5">We would be pleased to invite you as our guests at our schools. Come and visit us! </string>
    <string name="title_activity_czech_map">Map</string>
</resources>
