<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_history_school"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="de.bbs_donnersbergkreis.www.schoolapp.Czech.History_school">

        <TextView
            android:id="@+id/textViewCzeInfo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/czech_info1" />

        <TextView
            android:id="@+id/textViewCzeInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo1"
            android:layout_alignStart="@+id/textViewCzeInfo1"
            android:layout_below="@+id/textViewCzeInfo1"
            android:layout_marginTop="15dp"
            android:text="@string/czech_info2" />

        <TextView
            android:id="@+id/textViewCzeInfo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo2"
            android:layout_alignStart="@+id/textViewCzeInfo2"
            android:layout_below="@+id/textViewCzeInfo2"
            android:layout_marginTop="15dp"
            android:text="@string/fields_of_study"
            tools:textSize="24sp" />

        <TextView
            android:id="@+id/textViewCzeInfo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo3"
            android:layout_alignStart="@+id/textViewCzeInfo3"
            android:layout_below="@+id/textViewCzeInfo3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/czech_info3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCzeInfo5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo4"
            android:layout_alignStart="@+id/textViewCzeInfo4"
            android:layout_below="@+id/textViewCzeInfo4"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/czech_info4" />

        <TextView
            android:id="@+id/textViewCzeInfo6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo3"
            android:layout_alignStart="@+id/textViewCzeInfo3"
            android:layout_below="@+id/textViewCzeInfo5"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/czech_info5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCzeInfo7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo4"
            android:layout_alignStart="@+id/textViewCzeInfo4"
            android:layout_below="@+id/textViewCzeInfo6"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/czech_info6" />

        <TextView
            android:id="@+id/textViewCzeInfo8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo3"
            android:layout_alignStart="@+id/textViewCzeInfo3"
            android:layout_below="@+id/textViewCzeInfo7"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/czech_info7"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCzeInfo9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo4"
            android:layout_alignStart="@+id/textViewCzeInfo4"
            android:layout_below="@+id/textViewCzeInfo8"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/czech_info8" />

        <TextView
            android:id="@+id/textViewCzeInfo10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo3"
            android:layout_alignStart="@+id/textViewCzeInfo3"
            android:layout_below="@+id/textViewCzeInfo9"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/czech_info9"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCzeInfo11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo4"
            android:layout_alignStart="@+id/textViewCzeInfo4"
            android:layout_below="@+id/textViewCzeInfo10"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/czech_info10" />

        <TextView
            android:id="@+id/textViewCzeInfo12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo3"
            android:layout_alignStart="@+id/textViewCzeInfo3"
            android:layout_below="@+id/textViewCzeInfo11"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/czech_info11"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCzeInfo13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo4"
            android:layout_alignStart="@+id/textViewCzeInfo4"
            android:layout_below="@+id/textViewCzeInfo12"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/czech_info12" />

        <TextView
            android:id="@+id/textViewCzeInfo14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo3"
            android:layout_alignStart="@+id/textViewCzeInfo3"
            android:layout_below="@+id/textViewCzeInfo13"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/czech_info13"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCzeInfo15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCzeInfo4"
            android:layout_alignStart="@+id/textViewCzeInfo4"
            android:layout_below="@+id/textViewCzeInfo14"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/czech_info14" />

    </RelativeLayout>
</ScrollView>